--- a/templates/index.html
+++ b/templates/index.html
@@ -39,8 +39,7 @@
 <!-- Main jumbotron for a primary marketing message or call to action -->
      <div class="container">
       <div class="jumbotron">
-         <h1 class="display-3">Simplified MLApp</h1>
-          <p>Simplify Your Machine Learning and Data Exploration(Semi-Automated ML)</p>
+       <h1 class="display-3">Simplified MLApp</h>
           <p><a href="{{ url_for('index')}}" type="button" class="btn btn-primary" > Refresh</a></p>
         </div>
 
